--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,21 +1,18 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
-repo: upptime # The name of this repository
+owner: chatquick # Your GitHub organization or username, where this repository lives
+repo: status # The name of this repository
 
 sites:
   - name: Quicksales
     url: https://www.quicksales.vn
   - name: Quickchat
     url: https://chat.quicksales.vn
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
+
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
+  cname: status.quicksales.vn
   # baseUrl: /your-repo-name
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Upptime
