--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -15,12 +15,14 @@ status-website:
   cname: status.quicksales.vn
   # baseUrl: /your-repo-name
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  name: Monitor Website Uptime and Availability
+  introTitle: "**Monitor Website Uptime and Availability**"
+  introMessage: Welcome to Quicksale's real-time and historical data on system performance.
   navbar:
     - title: Status
       href: /
+    - title: Facebook
+      href: https://fb.com/quicksales4vn
     - title: GitHub
       href: https://github.com/$OWNER/$REPO
 
