--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -7,15 +7,17 @@ sites:
     url: https://www.quicksales.vn
   - name: Quickchat
     url: https://chat.quicksales.vn
-
-
+  - name: Quickchat Dev
+    url: https://dev.quicksales.vn
+  - name: Quickchat App
+    url: https://app.quicksales.vn
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   cname: status.quicksales.vn
   # baseUrl: /your-repo-name
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Monitor Website Uptime and Availability
+  name: Quicksales Inc.,
   introTitle: "**Monitor Website Uptime and Availability**"
   introMessage: Welcome to Quicksale's real-time and historical data on system performance.
   navbar:
